@@ -1,9 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>plugin</artifactId>
-        <version>1.580.1</version>
+        <version>2.7</version>
     </parent>
 
     <groupId>com.sonyericsson.hudson.plugins.gerrit</groupId>
@@ -52,12 +53,16 @@
     </developers>
 
     <properties>
+        <jenkins.version>1.609.3</jenkins.version>
+        <java.level>6</java.level>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.net.id>rsandell</java.net.id>
+        <findbugs.failOnError>false</findbugs.failOnError>
+        <concurrency>1C</concurrency>
         <powermock.version>1.6.2</powermock.version>
-        <findbugs.version>3.0.2</findbugs.version>
         <checkstyle.version>2.13</checkstyle.version>
         <mockito.version>1.10.19</mockito.version>
+        <workflow.version>1.14</workflow.version>
+        <workflow.version.test>1.14.1-beta-1</workflow.version.test>
     </properties>
 
     <dependencies>
@@ -66,6 +71,24 @@
             <artifactId>gerrit-events</artifactId>
             <version>2.9.5</version>
             <!-- New source is here: https://github.com/sonyxperiadev/gerrit-events -->
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.httpcomponents</groupId>
+                    <artifactId>httpclient</artifactId>
+                    <!--
+                    We could release a version of gerrit-events that uses the newer required version.
+                    I ran the full test suite with v 4.5 and it worked.
+                    But a new module version just for that feels like too much of a hassle.
+                    TODO remove when gerrit-events comes with the newer dependency.
+                    -->
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5</version>
+            <!-- TODO remove when gerrit-events comes with the newer dependency. -->
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
@@ -102,15 +125,21 @@
             <version>2.0</version>
         </dependency>
         <dependency>
+            <groupId>org.jenkins-ci.plugins</groupId>
+            <artifactId>junit</artifactId>
+            <version>1.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-aggregator</artifactId>
-            <version>1.4</version>
+            <version>${workflow.version.test}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-step-api</artifactId>
-            <version>1.4</version>
+            <version>${workflow.version}</version>
             <optional>true</optional>
         </dependency>
         <dependency>
@@ -201,40 +230,18 @@
     </pluginRepositories>
     <build>
         <plugins>
-            <!-- Uncomment to change contextPath and jenkinsHome-->
-            <!--<plugin>
-                <groupId>org.jenkins-ci.tools</groupId>
-                <artifactId>maven-hpi-plugin</artifactId>
-                <version>1.74</version>
-                <extensions>true</extensions>
-                <configuration>
-                    <showDeprecation>true</showDeprecation>
-                    <contextPath>/hudson</contextPath>
-                    <hudsonHome>/tmp/ghtJenkinsHome</hudsonHome>
-                </configuration>
-            </plugin>-->
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.16</version>
                 <configuration>
-                    <forkMode>always</forkMode>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>2.5.1</version>
-                <configuration>
-                    <goals>-DskipTests deploy</goals>
+                    <systemProperties>
+                        <property>
+                            <name>hudson.udp</name>
+                            <value>33849</value>
+                        </property>
+                    </systemProperties>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=380m</argLine>
+                    <reuseForks>false</reuseForks>
+                    <forkCount>${concurrency}</forkCount>
                 </configuration>
             </plugin>
             <plugin>
@@ -244,25 +251,6 @@
                         <goals>
                             <goal>test-jar</goal>
                         </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>build-helper-maven-plugin</artifactId>
-                <version>1.7</version>
-                <executions>
-                    <execution>
-                        <id>add-eclipse-sources</id>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>add-source</goal>
-                        </goals>
-                        <configuration>
-                            <sources>
-                                <source>${basedir}/target/generated-sources/localizer</source>
-                            </sources>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -294,25 +282,6 @@
                         <configuration>
                             <violationSeverity>warning</violationSeverity>
                         </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>findbugs-maven-plugin</artifactId>
-                <version>${findbugs.version}</version>
-                <configuration>
-                    <xmlOutput>true</xmlOutput>
-                    <excludeFilterFile>build-config/findbugs-exclude.xml</excludeFilterFile>
-                    <!-- Optional directory to put findbugs xdoc xml report -->
-                    <!--<xmlOutputDirectory>target/site</xmlOutputDirectory>-->
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>findbugs</goal>
-                        </goals>
-                        <phase>test</phase>
                     </execution>
                 </executions>
             </plugin>
@@ -366,13 +335,6 @@
                 </executions>
             </plugin>
         </plugins>
-        <extensions>
-            <extension>
-                <groupId>org.jvnet.wagon-svn</groupId>
-                <artifactId>wagon-svn</artifactId>
-                <version>1.9</version>
-            </extension>
-        </extensions>
     </build>
 
     <distributionManagement>
@@ -386,6 +348,6 @@
         <connection>scm:git:ssh://github.com/jenkinsci/gerrit-trigger-plugin.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/jenkinsci/gerrit-trigger-plugin.git</developerConnection>
         <url>https://github.com/jenkinsci/gerrit-trigger-plugin</url>
-      <tag>HEAD</tag>
-  </scm>
+        <tag>HEAD</tag>
+    </scm>
 </project>
